--- a/wp-content/themes/FooDog/style.css
+++ b/wp-content/themes/FooDog/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: FooDog
-Author: Matthieu
+Author: Michael & Matthieu
 Description: WordPress Template
 Version: 0.0.1
 Tags: bootstrap
