--- a/wp-content/themes/FooDog/css/blog.css
+++ b/wp-content/themes/FooDog/css/blog.css
@@ -36,7 +36,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-color: #1A1717;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -158,7 +158,7 @@ h6, .h6 {
   padding: 40px 0;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
+  background-color: #1A1717;
   border-top: 1px solid #e5e5e5;
 }
 .blog-footer p:last-child {
